tests/toylang/neg/001311_mutation.toylang
program a = { var else a : bool; } .
